Fixed Nav overflow

--- a/src/components/Navbar/Nav.scss
+++ b/src/components/Navbar/Nav.scss
@@ -1,4 +1,5 @@
 .nav {
+  @apply px-2 pr-4;
   .logo-container {
     width: 10rem;
     height: 4rem;
